# turkish-finance-data

./: .gitignore  DATA_SOURCES.md  README.md  pyproject.toml  sources.json
docs/: FUND_DATA_INVENTORY_TR.md  FUND_EXPORT_GUIDE_TR.md  TEFAS_PERMISSION_REQUEST_TR.md
reports/: fund-data-status-2026-07-10.md  usdtry-2026-07-10-detayli.md  usdtry-2026-07-10.md
src/turkish_finance_data/: __init__.py  evds.py  portfolio_import.py  spk_monthly.py  tefas_import.py  usdtry_report.py
tests/: test_evds.py  test_portfolio_import.py  test_spk_monthly.py  test_tefas_import.py  test_usdtry_report.py
