[project]
name = "turkish-finance-data"
version = "0.2.0"
description = "Source-aware clients and schemas for Turkish financial research data"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
xls = ["xlrd>=2.0.1,<3"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
